service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-backend-service
spec:
  type: NodePort
  selector:
    name: demo-backend-nginx
  ports:
    - protocol: TCP
      targetPort: 8001
      port: 80
