ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: zoeliao.demo.com
      http:
        paths:
          - backend:
              serviceName: demo-backend-service 
              servicePort: 80
